--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "pgp": "^0.1.0"
+    "pgp": "^0.1.0",
+    "ws": "^8.16.0"
   }
 }
